Update in Columns that addded thete response Title
